# c-tdd

./: .gitignore  CMakeLists.txt  README.md  scent.py
do/: bootstrap  build
ext/io/: io.h
src/translate/: CMakeLists.txt  translate.c  translate.h
test/: CMakeLists.txt  test_translate.c  test_translate_todo.c
